refactor: replace DTOs and entities with records, add Lombok annotations, and simplify methods